# wasm-ctr

./: .dockerignore  .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
docker/: Dockerfile
src/: main.rs
